tdf#92571: add mime types for several image file formats

The new mime types were added the followings:
   - eps -> image/x-eps
   - wmf -> image/x-wmf
   - bmp -> image/bmp
   - pct -> image/x-pct
These new mime types are written in the attribute "media-type"
of each image in the file "manifest.xml"

Change-Id: I16edb625e331d3f917c6e8929df004191e317acc
Reviewed-on: https://gerrit.libreoffice.org/17123
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>